--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -3,7 +3,7 @@ name: Actions 😎
 on: [push, pull_request]
 
 jobs:
-  build:
+  buildWebGL:
     name: Build my project ✨
     runs-on: ubuntu-latest
     steps:
