--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+# Misc
 .vsconfig
 UpgradeLog.htm
 
